[package]
name = "cere-executor"
version = "0.0.1"
edition = "2021"
description = "A set of common definitions that are needed for defining execution engines."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
environmental = "1.1.3"
thiserror = "1.0.30"
wasmer = { version = "2.2", features = ["singlepass"] }
wasmi = "0.13"
sc-allocator = { workspace = true }
sp-wasm-interface = { workspace = true }
sp-core = { workspace = true }

[features]
default = []
